# rust-serial-prototype

./: .gitattributes  Cargo.toml  LICENSE  README.md
examples/: clone_read_write.rs  list_devices.rs  threaded_read.rs  threaded_read_write.rs  windows_com_port_overlapped.rs  windows_com_port_timeouts.rs
src/: lib.rs  unix.rs  windows.rs
src/sys/: mod.rs  unix.rs  windows.rs  windows_experimental.rs
