[package]
name = "serial"
version = "0.0.1"
authors = ["Carsten Andrich <carsten@andrich.name>"]
edition = "2018"
# minimum supported rust version (MSRV) is actually Rust 1.46, due to Windows
# ERROR_SEM_TIMEOUT not being std::io::ErrorKind::TimedOut prior to Rust 1.46
rust-version = "1.56"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "linux")'.dependencies]
udev = "0.4"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["std", "commapi", "errhandlingapi", "fileapi", "handleapi", "ioapiset", "synchapi", "winbase", "winerror", "winnt"] }

[features]
experimental = []
